Stop header from overflowing page size

--- a/css/calendar.css
+++ b/css/calendar.css
@@ -17,7 +17,6 @@ body {
 
 .title {
     display: block;
-    width: 100%;
     padding: 10px;
     font-family: 'Raleway', sans-serif, Helvetica;
     background-color: #3f5f95;
